finished text for netherlands page, need images

--- a/NetherlandsGuide.html
+++ b/NetherlandsGuide.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Guide</title>
+<title>NetherlandsGuide</title>
 <!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
 		<script>
@@ -190,61 +190,104 @@
 <div class = "CountryList">
 
 	<h1>Some Facts about Country</h1>
-	<p></p>
+	<p>The Netherlands is a small country located in Western Europe, bordered by Germany to the east, 
+		Belgium to the south, and the North Sea to the west and north. The country has a population of 
+		approximately 17 million people and is known for its iconic windmills, tulip fields, and historic 
+		cities such as Amsterdam, Rotterdam, and the Hague. The official language is Dutch, and the 
+		currency is the euro. The Netherlands is a constitutional monarchy with a parliamentary system of 
+		government, and its economy is known for its strong agricultural, trading, and technological sectors. 
+		The country is also known for its progressive social policies, including legalized same-sex marriage.
+	</p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>City</p>
+	<p>Amsterdam</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $59 / day per person</li>
+		<li>Mid-Range: $149 /  day per person</li>
+		<li>High-Range: $384 / day per person</li>
 	</ul>
-	<p>City</p>
+	<p>Rotterdam</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $55 / day per person</li>
+		<li>Mid-Range: $129 /  day per person</li>
+		<li>High-Range: $262 / day per person</li>
+	</ul>
+	<p>The Hague</p>
+	<ul>
+		<li>Budget: $66 / day per person</li>
+		<li>Mid-Range: $152 /  day per person</li>
+		<li>High-Range: $304 / day per person</li>
 	</ul>
 
-	<h1>Popular Cities in </h1>
+	<h1>Popular Cities in The Netherlands</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Amsterdam</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-		<h4></h4>
-        <p></p>
+		<img src = "Images//" alt = "Rijksmuseum">
+		<h4>Rijksmuseum</h4>
+        <p>This museum is dedicated to Dutch art and history with a collection of about 
+			1 million objects.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images//" alt = "Anne Frank House">
+        <h4>Anne Frank House</h4>
+		<p>This biographical is dedicated to Anne Frank and her time hiding from nazi 
+			persecution with her family.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images//" alt = "Van Gogh Museum">
+        <h4>Van Gogh Museum</h4>
+		<p>This museum is dedicated to Dutch artist Vincent Van Gogh and contains the largest 
+			collection of his works in the world.
+		</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Rotterdam</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images//" alt = "Museum Boijmans-van Beuningen">
+        <h4>Museum Boijmans-van Beuningen</h4>
+		<p>This museum has a collection of over 151,000 medieval and contemporary 
+			artworks that have been collected over 170 years.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images//" alt = "Cube Houses">
+        <h4>Cube Houses</h4>
+		<p>These houses are based on the idea of "living as an urban roof" according 
+			to the architect Piet Blom.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images//" alt = "Euromast">
+        <h4>Euromast</h4>
+		<p>This observation tower was built for the 1960 Floriade.</p>
+	</div>
+</div>
+<br>
+<h3>Places to Visit in The Hague</h3>
+<br>
+<div class = "row">
+	<div class = "1column">
+		<img src = "Images//" alt = "The Pier">
+        <h4>The Pier</h4>
+		<p>This pier contains a range of restaurants and shops, as well as activities 
+			like a zipline and ferris wheel.
+		</p>
+	</div>
+	<div class = "1column">
+		<img src = "Images//" alt = "Peace Palace">
+        <h4>Peace Palace</h4>
+		<p>This is the international law administrative building that houses the 
+			International Court of Justice, the Permanent Court of Arbitration, The Hague 
+			Academy of International Law and the Peace Palace Library.
+		</p>
 	</div>
 </div>
 </div>
